--- a/express/web/public/css/style.css
+++ b/express/web/public/css/style.css
@@ -53,7 +53,9 @@ input {
   justify-content: center;
   align-items: center;
 }
-
+.sBorder {
+  border: #fff 0.1rem solid;
+}
 .mBorder {
   border: #fff 0.2rem solid;
   border-radius: 1rem;
