--- a/express/web/public/page/static/static.css
+++ b/express/web/public/page/static/static.css
@@ -1,11 +1,3 @@
-html {
-  background: black;
-}
-
-body {
-  background: rgba(51, 51, 51, 1);
-}
-
 #messageicon {
   margin-bottom: 1rem;
   font-size: 2.5em;
@@ -102,8 +94,6 @@ body {
   width: 45%;
 }
 
-
-
 #addDatePicker {
   text-align: center;
   font-size: 1.4rem;
@@ -185,7 +175,7 @@ body {
 .centerAnima-leave-to
 
 /* .fade-leave-active below version 2.1.8 */
-  {
+ {
   transform: scale(1, 0);
   opacity: 0;
 }
@@ -194,7 +184,7 @@ body {
 .centerAnima-leave
 
 /* .fade-leave-active below version 2.1.8 */
-  {
+ {
   opacity: 1;
   transform: scale(1, 1);
 }
@@ -206,4 +196,9 @@ body {
 .commoniconAnima-enter,
 .commoniconAnima-leave-to {
   opacity: 0;
+}
+
+/* element 覆盖样式 */
+.el-loading-spinner .el-loading-text {
+  font-size: 2rem;
 }
