--- a/express/web/public/page/static/static.css
+++ b/express/web/public/page/static/static.css
@@ -47,6 +47,7 @@
   margin-top: 5%;
   height: 15%;
   width: 95%;
+  justify-content: space-evenly;
 }
 
 #realCenter {
@@ -175,7 +176,7 @@
 .centerAnima-leave-to
 
 /* .fade-leave-active below version 2.1.8 */
-  {
+ {
   transform: scale(1, 0);
   opacity: 0;
 }
@@ -184,7 +185,7 @@
 .centerAnima-leave
 
 /* .fade-leave-active below version 2.1.8 */
-  {
+ {
   opacity: 1;
   transform: scale(1, 1);
 }
@@ -209,7 +210,6 @@
 
 .el-message-box {
   width: 99%;
-
 }
 
 .el-input--suffix .el-input__inner {
